[package]
name = "tsp_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#itertools="0.7.8"
regex = "1"
clap = { version = "3.2.16" , features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
#sysinfo = "0.26.4"
#bitmaps="3.2.0"
